--- a/roboshop/frontend.yml
+++ b/roboshop/frontend.yml
@@ -1,7 +1,7 @@
 - name: Setup frontend
   hosts: all
   tasks: 
-     - name: Install the latest version of Nginx 
+     - name: Installing the  Nginx 
   ansible.builtin.yum:
     name: nginx
     state: latest
